updated rickrolled thumbnail

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -25,7 +25,7 @@
   },
   {
     "name": "RickRolled",
-    "thumbnail": "https://i.postimg.cc/1tb7smf5/rick-rolled.png",
+    "thumbnail": "https://i.postimg.cc/mg7V1YwL/rickrolled.jpg",
     "url": "https://nohagasclick.now.sh/",
     "github": "https://github.com/pedrokuper/rickrolled"
   }
