Netflix clone url updated

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -2,7 +2,7 @@
   {
     "name": "Netflix Clone",
     "thumbnail": "https://i.postimg.cc/WztQj1Tt/courflix.jpg",
-    "url": "https://courflix-react-pk.vercel.app",
+    "url": "https://react-courflix-pk.vercel.app/",
     "github": "https://github.com/pedrokuper/courflix-react"
   },
   {
